--- a/app/src/main/res/layout/activity_crop_fertilizer_application_manager.xml
+++ b/app/src/main/res/layout/activity_crop_fertilizer_application_manager.xml
@@ -221,7 +221,7 @@
 
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/rate"
+                    android:text="@string/amount_used"
                     android:textColor="@color/textColor"
                     android:textSize="16sp"
                     android:layout_marginBottom="4dp" />
@@ -249,7 +249,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="0.6"
-                android:text="Kg/ha"
+                android:text="Kg"
                 android:background="@drawable/input_shapes_grey_units_right"
                 android:textColor="@color/colorPrimary"
                 android:gravity="center"
@@ -291,7 +291,7 @@
                         android:id="@+id/txt_crop_fertilizer_application_currency"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_weight="0.8"
+                        android:layout_weight="0.7"
                         android:text="@string/ugx"
                         android:textColor="@color/colorPrimary"
                         android:gravity="center"
@@ -304,7 +304,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:ems="10"
-                        android:layout_weight="0.2"
+                        android:layout_weight="0.3"
                         android:hint="Enter.."
                         android:textSize="14sp"
                         android:inputType="numberDecimal"
