--- a/app/src/main/res/layout/content_crop_machine_task_manager.xml
+++ b/app/src/main/res/layout/content_crop_machine_task_manager.xml
@@ -23,14 +23,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_marginBottom="5dp"
+                android:layout_marginBottom="10dp"
                 >
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_margin="4dp"
+                    android:layout_marginEnd="10dp"
                     android:layout_weight="1">
 
                     <TextView
@@ -38,9 +38,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/title"
-                        android:textColor="@color/colorPrimary"
-                        android:textStyle="bold"
-                        android:textSize="16sp" />
+                        android:textColor="@color/textColor"
+                        android:textSize="15sp" />
 
                     <EditText
                         android:id="@+id/txt_crop_task_title"
@@ -59,50 +58,50 @@
                     android:layout_height="match_parent"
                     android:orientation="vertical"
                     android:layout_weight="1"
-                    android:layout_margin="4dp">
+                    >
 
                     <TextView
 
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/personnel"
-                        android:textColor="@color/colorPrimary"
-                        android:textStyle="bold"
-                        android:textSize="16sp" />
-
+                        android:textColor="@color/textColor"
+                        android:textSize="15sp" />
+                 <LinearLayout
+                     android:layout_width="match_parent"
+                     android:layout_height="wrap_content"
+                     android:background="@drawable/input_shapes_grey_spinner"
+                     android:padding="3.4dp">
                     <Spinner
                         android:id="@+id/sp_crop_task_personnel"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:ems="10"
-                        android:background="@drawable/input_shapes"
 
-                        android:textSize="14sp"
                         />
-
+                 </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_marginBottom="5dp">
+                android:layout_marginBottom="10dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     android:layout_weight="1"
-                    android:layout_margin="4dp">
+                    android:layout_marginEnd="10dp">
 
                     <TextView
 
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Start Date"
-                        android:textColor="@color/colorPrimary"
-                        android:textStyle="bold"
-                        android:textSize="16sp" />
+                        android:textColor="@color/textColor"
+                        android:textSize="15sp" />
 
                     <EditText
                         android:id="@+id/txt_crop_task_start_date"
@@ -110,7 +109,7 @@
                         android:layout_height="wrap_content"
                         android:textColor="@color/black"
                         android:hint="Select"
-                        android:background="@drawable/input_shapes"
+                        android:background="@drawable/input_shapes_grey_spinner"
                         android:inputType="none"
 
                         android:textSize="14sp" />
@@ -120,15 +119,14 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     android:layout_weight="1"
-                    android:layout_margin="4dp">
+                    >
                     <TextView
 
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="End Date"
-                        android:textColor="@color/colorPrimary"
-                        android:textStyle="bold"
-                        android:textSize="16sp" />
+                        android:textColor="@color/textColor"
+                        android:textSize="15sp" />
 
                     <EditText
                         android:id="@+id/txt_crop_task_end_date"
@@ -136,7 +134,7 @@
                         android:layout_height="wrap_content"
                         android:textColor="@color/black"
                         android:hint="Select"
-                        android:background="@drawable/input_shapes"
+                        android:background="@drawable/input_shapes_grey_spinner"
                         android:inputType="none"
 
                         android:textSize="14sp" />
@@ -157,7 +155,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_margin="4dp">
+                android:layout_marginBottom="10dp">
 
                 <TextView
 
@@ -165,9 +163,8 @@
                     android:layout_height="wrap_content"
 
                     android:text="@string/description"
-                    android:textColor="@color/colorPrimary"
-                    android:textStyle="bold"
-                    android:textSize="16sp" />
+                    android:textColor="@color/textColor"
+                    android:textSize="15sp"/>
 
                 <EditText
                     android:id="@+id/txt_crop_task_description"
@@ -186,6 +183,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
+                android:layout_marginBottom="10dp"
                 >
 
                 <LinearLayout
@@ -193,7 +191,7 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     android:layout_weight="1"
-                    android:layout_margin="4dp"
+                    android:layout_marginEnd="10dp"
                     >
 
                     <TextView
@@ -201,25 +199,27 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/status"
-                        android:textColor="@color/colorPrimary"
-                        android:textSize="16sp"
-                        android:textStyle="bold" />
+                        android:textColor="@color/textColor"
+                        android:textSize="15sp"
+                         />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/input_shapes_grey_spinner"
+                        android:padding="3.4dp">
 
                     <Spinner
                         android:id="@+id/sp_crop_task_status"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/input_shapes"
-                        android:textSize="14sp"
                         android:entries="@array/sp_crop_task_status"
                         />
-
+                    </LinearLayout>
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_margin="4dp"
                     android:layout_weight="1">
 
                     <TextView
@@ -227,19 +227,36 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Cost"
-                        android:textColor="@color/colorPrimary"
-                        android:textStyle="bold"
-                        android:textSize="16sp" />
+                        android:textColor="@color/textColor"
+                        android:textSize="15sp" />
 
-                    <EditText
-                        android:id="@+id/txt_crop_task_cost"
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/black"
-                        android:hint="Enter.."
-                        android:background="@drawable/input_shapes"
-                        android:inputType="numberDecimal"
-                        android:textSize="14sp" />
+                        android:orientation="horizontal"
+                        >
+
+                        <TextView
+                            android:id="@+id/txt_crop_task_currency"
+                            android:background="@drawable/input_shapes_grey_units"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:gravity="center"
+                            android:textColor="@color/colorPrimary"
+                            android:text="UGX"
+                            android:textSize="14sp"
+                            android:layout_weight="0.2"/>
+                        <EditText
+                            android:id="@+id/txt_crop_task_cost"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:textColor="@color/black"
+                            android:text="@string/default_numeric_value"
+                            android:background="@drawable/input_shapes"
+                            android:inputType="numberDecimal"
+                            android:textSize="14sp"
+                            android:layout_weight="0.5"/>
+                    </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
             <LinearLayout
@@ -253,7 +270,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_margin="4dp"
+                    android:layout_marginEnd="10dp"
                     android:layout_weight="1">
 
                     <TextView
@@ -261,19 +278,22 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/recurrence"
-                        android:textColor="@color/colorPrimary"
-                        android:textStyle="bold"
-                        android:textSize="16sp" />
+                        android:textColor="@color/textColor"
+                        android:textSize="15sp" />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/input_shapes_grey_spinner"
+                        android:padding="3.4dp">
 
                     <Spinner
                         android:id="@+id/sp_crop_task_recurrence"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:ems="10"
-                        android:background="@drawable/input_shapes"
                         android:entries="@array/sp_crop_task_recurrence"
-                        android:textSize="14sp"
                         />
+                    </LinearLayout>
                 </LinearLayout>
 
                 <LinearLayout
@@ -281,26 +301,28 @@
                     android:layout_height="match_parent"
                     android:orientation="vertical"
                     android:layout_weight="1"
-                    android:layout_margin="4dp">
+                    >
 
                     <TextView
 
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/reminders"
-                        android:textColor="@color/colorPrimary"
-                        android:textSize="16sp"
-                        android:textStyle="bold" />
+                        android:textColor="@color/textColor"
+                        android:textSize="15sp" />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/input_shapes_grey_spinner"
+                        android:padding="3.4dp">
 
                     <Spinner
                         android:id="@+id/sp_crop_task_reminders"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/input_shapes"
-                        android:textSize="14sp"
                         android:entries="@array/sp_crop_task_reminders"
                         />
-
+                    </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
             <LinearLayout
@@ -308,6 +330,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="5dp"
                 android:visibility="gone"
                 >
 
@@ -316,7 +340,7 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:layout_weight="1"
-                    android:layout_margin="4dp"
+                    android:layout_marginEnd="10dp"
                     android:gravity="center_vertical"
                     >
 
@@ -325,9 +349,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Every:"
-                        android:textColor="@color/colorPrimary"
-                        android:textSize="16sp"
-                        android:textStyle="bold"
+                        android:textColor="@color/textColor"
+                        android:textSize="15sp"
                         android:layout_weight="0.3"/>
 
                     <LinearLayout
@@ -339,7 +362,7 @@
                         <EditText
                             android:id="@+id/txt_crop_task_weekly_weeks"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_height="match_parent"
                             android:textColor="@color/black"
                             android:text="@string/default_numeric_value"
                             android:background="@drawable/input_shapes"
@@ -349,10 +372,12 @@
                         <TextView
 
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_height="match_parent"
                             android:text="Weeks"
-                            android:textSize="16sp"
-                            android:textStyle="bold"
+                            android:textSize="14sp"
+                            android:textColor="@color/colorPrimary"
+                            android:background="@drawable/input_shapes_grey_units_right"
+                            android:gravity="center"
                             android:layout_weight="0.2"/>
                     </LinearLayout>
 
@@ -363,7 +388,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:layout_margin="4dp"
                     android:layout_weight="1">
 
                     <TextView
@@ -371,9 +395,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/repeat_until"
-                        android:textColor="@color/colorPrimary"
-                        android:textStyle="bold"
-                        android:textSize="16sp"
+                        android:textColor="@color/textColor"
+                        android:textSize="15sp"
                         android:layout_weight="0.3"/>
 
                     <EditText
@@ -382,7 +405,7 @@
                         android:layout_height="wrap_content"
                         android:textColor="@color/black"
                         android:hint="Select"
-                        android:background="@drawable/input_shapes"
+                        android:background="@drawable/input_shapes_grey_spinner"
                         android:inputType="none"
                         android:textSize="14sp"
                         android:layout_weight="0.7"/>
@@ -394,10 +417,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_margin="4dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
                 android:layout_weight="1"
-                android:background="@color/gray_mh"
                 android:visibility="gone"
+
                 >
                 <EditText
                     android:id="@+id/txt_crop_task_days_before"
@@ -417,8 +441,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Days Before"
-                    android:textStyle="bold"
-                    android:textSize="16sp"
+                    android:background="@drawable/input_shapes_grey_units_right"
+                    android:textSize="14sp"
+                    android:textColor="@color/colorPrimary"
+                    android:gravity="center"
                     android:layout_weight="0.3"/>
 
 
