--- a/app/src/main/res/layout/crop_cultivation_list_card.xml
+++ b/app/src/main/res/layout/crop_cultivation_list_card.xml
@@ -173,7 +173,30 @@
                         android:text="50000"
                         android:textColor="#899889" />
                 </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_margin="0dp"
+                    android:padding="4dp">
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_marginStart="34dp"
+                        android:text="Recurrence : "
+                        android:textSize="14sp"
+                        android:textColor="@color/blackText"
+                        />
 
+                    <TextView
+                        android:id="@+id/txt_view_crop_cultivation_card_recurrence"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="Monthly"
+                        android:textColor="#899889" />
+                </LinearLayout>
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
