--- a/app/src/main/res/layout/activity_crop_irrigation_manager.xml
+++ b/app/src/main/res/layout/activity_crop_irrigation_manager.xml
@@ -63,14 +63,38 @@
                     android:layout_marginBottom="4dp"
                     android:textSize="16sp" />
 
-                <EditText
-                    android:id="@+id/txt_crop_irrigation_system_rate"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Enter.."
-                    android:background="@drawable/input_shapes"
-                    android:inputType="numberDecimal"
-                    android:textSize="14sp" />
+                    android:orientation="horizontal"
+
+                    >
+                    <EditText
+                        android:id="@+id/txt_crop_irrigation_system_rate"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/input_shapes"
+                        android:ems="10"
+                        android:hint="Enter.."
+                        android:layout_weight="0.2"
+
+                        android:inputType="numberDecimal"
+                        android:textSize="14sp"
+
+                        />
+
+                    <TextView
+
+                        android:id="@+id/txt_crop_irrigation_system_rate_units"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:padding="4dp"
+                        android:text="ltrs/hr"
+                        android:layout_weight="0.8"
+                        android:textAlignment="center"
+                        android:background="@drawable/input_shapes_grey_units_right"
+                        />
+                </LinearLayout>
             </LinearLayout>
 
 
