--- a/app/src/main/res/layout/activity_crop_transplanting_manager.xml
+++ b/app/src/main/res/layout/activity_crop_transplanting_manager.xml
@@ -91,7 +91,7 @@
                     android:layout_weight="1">
 
                     <TextView
-
+                        android:id="@+id/txt_crop_transplanting_seedling_per_unit"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/seedling_per_ha"
@@ -174,7 +174,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_marginRight="20dp"
                     android:layout_weight="1">
 
                     <TextView
@@ -196,46 +195,42 @@
                         />
                 </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:layout_weight="1">
 
-                    <TextView
-
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@string/expected_harvesting_date"
-                        android:textColor="@color/textColor"
-                        android:layout_marginBottom="4dp"
-                        android:textSize="15sp" />
-
-                    <TextView
-                        android:id="@+id/txt_crop_transplanting_expected_harvesting_date"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/input_shapes"
-                        android:hint="Select"
-                        android:inputType="none"
-                        android:textSize="14sp"
-                        />
-                </LinearLayout>
             </LinearLayout>
-
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginBottom="10dp"
-                >
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:layout_weight="1"
+                android:layout_marginBottom="10dp">
+
+                <TextView
+
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/expected_harvesting_date"
+                    android:textColor="@color/textColor"
+                    android:layout_marginBottom="4dp"
+                    android:textSize="15sp" />
+
+                <TextView
+                    android:id="@+id/txt_crop_transplanting_expected_harvesting_date"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/input_shapes"
+                    android:hint="Select"
+                    android:inputType="none"
+                    android:textSize="14sp"
+                    />
+            </LinearLayout>
+
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_marginRight="10dp"
-                    android:layout_weight="1">
+                    android:layout_weight="1"
+                    android:layout_marginBottom="10dp">
 
                     <TextView
 
@@ -259,57 +254,66 @@
                         />
                     </LinearLayout>
                 </LinearLayout>
-                <LinearLayout
-                    android:layout_width="wrap_content"
+
+
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:layout_marginBottom="10dp">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginEnd="20dp"
+                android:layout_weight="1">
+
+                <TextView
+
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_marginRight="10dp"
-                    android:layout_weight="1">
+                    android:text="@string/expected_yield"
+                    android:textColor="@color/textColor"
+                    android:layout_marginBottom="4dp"
+                    android:textSize="15sp" />
 
-                    <TextView
-
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@string/expected_yield"
-                        android:textColor="@color/textColor"
-                        android:layout_marginBottom="4dp"
-                        android:textSize="15sp" />
-
-                    <EditText
-                        android:id="@+id/txt_crop_transplanting_expected_yield"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/input_shapes"
-                        android:hint="Enter.."
-                        android:textSize="14sp"
-                        />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:layout_weight="1">
-
-                    <TextView
-
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@string/expected_yield_per_ha"
-                        android:textColor="@color/textColor"
-                        android:layout_marginBottom="4dp"
-                        android:textSize="15sp" />
-
-                    <EditText
-                        android:id="@+id/txt_crop_transplanting_expected_yield_per_ha"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/input_shapes"
-                        android:hint="Enter.."
-                        android:textSize="14sp"
-                        />
-                </LinearLayout>
+                <EditText
+                    android:id="@+id/txt_crop_transplanting_expected_yield"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/input_shapes"
+                    android:hint="Enter.."
+                    android:textSize="14sp"
+                    />
             </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_weight="1">
+
+                <TextView
+                    android:id="@+id/txt_crop_transplanting_expected_yield_per_unit"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/expected_yield_per_ha"
+                    android:textColor="@color/textColor"
+                    android:layout_marginBottom="4dp"
+                    android:textSize="15sp" />
+
+                <EditText
+                    android:id="@+id/txt_crop_transplanting_expected_yield_per_ha"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/input_shapes"
+                    android:hint="Enter.."
+                    android:textSize="14sp"
+                    android:inputType="number"
+                    />
+            </LinearLayout>
+</LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -320,7 +324,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:layout_weight="1"
-                android:layout_marginRight="20dp">
+                android:layout_marginEnd="20dp">
 
                 <TextView
 
@@ -464,6 +468,7 @@
                 android:orientation="horizontal"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
+                android:visibility="gone"
                 >
 
                 <LinearLayout
@@ -551,6 +556,7 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
                 android:layout_weight="1"
+                android:visibility="gone"
 
                 >
                 <EditText
