--- a/app/src/main/res/layout/content_crop_inventory_fertilizer_manager.xml
+++ b/app/src/main/res/layout/content_crop_inventory_fertilizer_manager.xml
@@ -81,7 +81,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="12dp"
+                android:layout_marginBottom="10dp"
                 android:orientation="horizontal">
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -94,8 +94,8 @@
                         android:layout_height="wrap_content"
                         android:text="Fertilizer Name"
                         android:layout_weight="0.7"
-                        android:textColor="@color/colorPrimary"
-                        android:textStyle="bold" />
+                        android:textColor="@color/textColor"
+                        android:textSize="15sp" />
 
                     <EditText
                         android:id="@+id/txt_crop_fertilizer_fertilizer_name"
@@ -115,7 +115,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="12dp"
+                android:layout_marginBottom="10dp"
                 android:orientation="horizontal">
 
                     <TextView
@@ -123,8 +123,8 @@
                         android:layout_height="wrap_content"
                         android:text="N-P-K"
                         android:layout_weight="1"
-                        android:textColor="@color/colorPrimary"
-                        android:textStyle="bold" />
+                        android:textColor="@color/textColor"
+                        android:textSize="15sp" />
                 
                     <EditText
                         android:id="@+id/txt_crop_fertilizer_npk_n"
@@ -169,7 +169,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="12dp"
+                android:layout_marginBottom="10dp"
                 android:orientation="horizontal">
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -182,8 +182,8 @@
                         android:layout_height="wrap_content"
                         android:text="Quantity"
                         android:layout_weight="0.8"
-                        android:textColor="@color/colorPrimary"
-                        android:textStyle="bold" />
+                        android:textColor="@color/textColor"
+                        android:textSize="15sp" />
 
                     <EditText
                         android:id="@+id/txt_crop_fertilizer_qty"
@@ -201,7 +201,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="12dp"
+                android:layout_marginBottom="10dp"
                 android:orientation="horizontal">
 
                 <LinearLayout
@@ -215,8 +215,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Batch #"
-                        android:textColor="@color/colorPrimary"
-                        android:textStyle="bold" />
+                        android:textColor="@color/textColor"
+                        android:textSize="15sp" />
 
                     <EditText
                         android:id="@+id/txt_crop_fertilizer_batch_number"
@@ -239,8 +239,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Serial #"
-                        android:textColor="@color/colorPrimary"
-                        android:textStyle="bold" />
+                        android:textColor="@color/textColor"
+                        android:textSize="15sp" />
 
                     <EditText
                         android:id="@+id/txt_crop_fertilizer_serial_number"
@@ -256,7 +256,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="12dp"
+                android:layout_marginBottom="10dp"
                 android:orientation="horizontal">
 
                 <LinearLayout
@@ -270,8 +270,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Supplier"
-                        android:textColor="@color/colorPrimary"
-                        android:textStyle="bold" />
+                        android:textColor="@color/textColor"
+                        android:textSize="15sp" />
 
                     <EditText
                         android:id="@+id/txt_crop_fertilizer_supplier"
@@ -294,19 +294,20 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Usage Unit"
-                        android:textColor="@color/colorPrimary"
-                        android:textStyle="bold" />
-
+                        android:textColor="@color/textColor"
+                        android:textSize="15sp" />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/input_shapes_grey_spinner"
+                        android:padding="3.4dp">
                     <Spinner
                         android:id="@+id/spinner_crop_fertilizer_usage_unit"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:entries="@array/crop_fertilizers_usage_units"
-                        android:textSize="14sp"
-                        android:background="@drawable/input_shapes"
-
-                        />
-
+                       />
+                    </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
             <LinearLayout
@@ -320,28 +321,27 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/cost"
-                    android:textStyle="bold"
-                    android:textSize="16sp"
-                    android:textColor="@color/colorPrimary"
+                    android:textColor="@color/textColor"
+                    android:textSize="15sp"
                     />
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:gravity="center_vertical"
-                    android:background="@color/gray_mh"
-                    android:layout_marginBottom="10dp">
+
+                   >
 
                     <TextView
-                        android:id="@+id/crop_cost"
+                        android:id="@+id/txt_crop_fertilizer_currency"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:text="@string/ugx"
                         android:layout_weight="0.1"
                         android:textSize="14sp"
                         android:textAlignment="center"
-                        android:textStyle="bold"
-                        android:gravity="center_vertical"
+                       android:background="@drawable/input_shapes_grey_units"
+                        android:gravity="center"
 
                         />
 
@@ -350,7 +350,7 @@
                         android:text="@string/default_numeric_value"
 
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:ems="10"
                         android:hint="Enter.."
                         android:layout_weight="0.5"
@@ -369,12 +369,12 @@
                 android:layout_height="wrap_content"
                 android:text="Macronutrients"
                 android:layout_weight="1"
-                android:textColor="@color/colorPrimary"
-                android:textStyle="bold" />
+                android:textColor="@color/textColor"
+                android:textSize="15sp"  />
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="12dp"
+                android:layout_marginBottom="10dp"
                 android:orientation="horizontal">
 
                 <TextView
@@ -382,8 +382,8 @@
                     android:layout_height="wrap_content"
                     android:text="Ca :"
                     android:layout_weight="1"
-                    android:textColor="@color/colorPrimary"
-                    android:textStyle="bold" />
+                    android:textColor="@color/textColor"
+                    android:textSize="15sp"  />
 
                 <EditText
                     android:id="@+id/txt_crop_fertilizer_macros_ca"
@@ -400,8 +400,8 @@
                     android:layout_height="wrap_content"
                     android:text="Mg :"
                     android:layout_weight="1"
-                    android:textColor="@color/colorPrimary"
-                    android:textStyle="bold" />
+                    android:textColor="@color/textColor"
+                    android:textSize="15sp"  />
                 <EditText
                     android:id="@+id/txt_crop_fertilizer_macros_mg"
                     android:layout_width="match_parent"
@@ -417,8 +417,8 @@
                     android:layout_height="wrap_content"
                     android:text="S :"
                     android:layout_weight="1"
-                    android:textColor="@color/colorPrimary"
-                    android:textStyle="bold" />
+                    android:textColor="@color/textColor"
+                    android:textSize="15sp"  />
                 <EditText
                     android:id="@+id/txt_crop_fertilizer_macros_s"
                     android:layout_width="match_parent"
@@ -437,12 +437,12 @@
                 android:layout_height="wrap_content"
                 android:text="Micronutrients"
                 android:layout_weight="1"
-                android:textColor="@color/colorPrimary"
-                android:textStyle="bold" />
+                android:textColor="@color/textColor"
+                android:textSize="15sp"  />
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="12dp"
+                android:layout_marginBottom="10dp"
                 android:orientation="horizontal">
 
                 <TextView
@@ -450,8 +450,8 @@
                     android:layout_height="wrap_content"
                     android:text="B :"
                     android:layout_weight="1"
-                    android:textColor="@color/colorPrimary"
-                    android:textStyle="bold" />
+                    android:textColor="@color/textColor"
+                    android:textSize="15sp"  />
 
                 <EditText
                     android:id="@+id/txt_crop_fertilizer_micros_b"
@@ -468,8 +468,8 @@
                     android:layout_height="wrap_content"
                     android:text="Mn :"
                     android:layout_weight="1"
-                    android:textColor="@color/colorPrimary"
-                    android:textStyle="bold" />
+                    android:textColor="@color/textColor"
+                    android:textSize="15sp"  />
                 <EditText
                     android:id="@+id/txt_crop_fertilizer_micros_mn"
                     android:layout_width="match_parent"
@@ -485,8 +485,8 @@
                     android:layout_height="wrap_content"
                     android:text="Cl :"
                     android:layout_weight="1"
-                    android:textColor="@color/colorPrimary"
-                    android:textStyle="bold" />
+                    android:textColor="@color/textColor"
+                    android:textSize="15sp"  />
                 <EditText
                     android:id="@+id/txt_crop_fertilizer_micros_cl"
                     android:layout_width="match_parent"
@@ -502,8 +502,8 @@
                     android:layout_height="wrap_content"
                     android:text="Mo :"
                     android:layout_weight="1"
-                    android:textColor="@color/colorPrimary"
-                    android:textStyle="bold" />
+                    android:textColor="@color/textColor"
+                    android:textSize="15sp"  />
                 <EditText
                     android:id="@+id/txt_crop_fertilizer_micros_mo"
                     android:layout_width="match_parent"
@@ -527,8 +527,8 @@
                     android:layout_height="wrap_content"
                     android:text="Cu :"
                     android:layout_weight="1"
-                    android:textColor="@color/colorPrimary"
-                    android:textStyle="bold" />
+                    android:textColor="@color/textColor"
+                    android:textSize="15sp"  />
 
                 <EditText
                     android:id="@+id/txt_crop_fertilizer_micros_cu"
@@ -545,8 +545,8 @@
                     android:layout_height="wrap_content"
                     android:text="Zn :"
                     android:layout_weight="1"
-                    android:textColor="@color/colorPrimary"
-                    android:textStyle="bold" />
+                    android:textColor="@color/textColor"
+                    android:textSize="15sp"  />
                 <EditText
                     android:id="@+id/txt_crop_fertilizer_micros_zn"
                     android:layout_width="match_parent"
@@ -562,8 +562,8 @@
                     android:layout_height="wrap_content"
                     android:text="Fe :"
                     android:layout_weight="1"
-                    android:textColor="@color/colorPrimary"
-                    android:textStyle="bold" />
+                    android:textColor="@color/textColor"
+                    android:textSize="15sp"  />
                 <EditText
                     android:id="@+id/txt_crop_fertilizer_micros_fe"
                     android:layout_width="match_parent"
@@ -579,8 +579,8 @@
                     android:layout_height="wrap_content"
                     android:text="Na :"
                     android:layout_weight="1"
-                    android:textColor="@color/colorPrimary"
-                    android:textStyle="bold" />
+                    android:textColor="@color/textColor"
+                    android:textSize="15sp"  />
                 <EditText
                     android:id="@+id/txt_crop_fertilizer_micros_na"
                     android:layout_width="match_parent"
