--- a/app/src/main/res/layout/crop_harvest_list_card.xml
+++ b/app/src/main/res/layout/crop_harvest_list_card.xml
@@ -39,7 +39,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="0.1"
-            android:paddingRight="20dp"
+            android:paddingEnd="20dp"
             android:paddingBottom="20dp"
             android:orientation="vertical">
 
@@ -120,14 +120,14 @@
                         android:textColor="@color/blackText"
                         android:textSize="14sp"
                         android:layout_marginStart="38dp"
-                        android:layout_weight="1"
+                        android:layout_weight="0.4"
                         />
 
                     <TextView
                         android:id="@+id/txt_view_crop_harvest_card_method"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                        android:layout_weight="0.6"
                         android:layout_marginStart="6dp"
                         android:textColor="#899889"
                         android:text="Hand Picking"/>
@@ -151,24 +151,27 @@
                         android:text="Quantity : "
                         android:textColor="@color/blackText"
                         android:textSize="14sp" />
-
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_weight="0.6">
                     <TextView
                         android:id="@+id/txt_view_crop_harvest_card_quantity"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="200 "
-                        android:paddingRight="0dp"
-                        android:layout_marginRight="0dp"
-                        android:layout_weight="0.4"
+                        android:layout_weight="0.2"
                         android:textColor="#899889"
                         android:textSize="14sp"/>
                     <TextView
                         android:id="@+id/txt_view_crop_harvest_card_units"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="0.4"
+                        android:layout_weight="0.8"
                         android:text=" tonnes"
                         android:textColor="#899889" />
+                </LinearLayout>
                 </LinearLayout>
 
 
@@ -184,7 +187,7 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                        android:layout_weight="0.4"
                         android:text="Status : "
                         android:layout_marginStart="38dp"
                         android:textColor="@color/blackText"
@@ -194,7 +197,7 @@
                         android:id="@+id/txt_view_crop_harvest_card_status"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                        android:layout_weight="0.6"
                         android:layout_marginStart="6dp"
                         android:text="Sold"
                         android:textColor="#899889" />
@@ -212,7 +215,7 @@
 
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                        android:layout_weight="0.4"
                         android:layout_marginStart="38dp"
                         android:text="Cost : "
                         android:textColor="@color/blackText"
@@ -222,13 +225,14 @@
                         android:id="@+id/txt_view_crop_harvest_card_cost"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                        android:layout_weight="0.6"
                         android:layout_marginStart="6dp"
                         android:text="UGX 150,000"
                         android:textColor="#899889" />
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/layout_crop_harvest_card_income_generated"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
@@ -237,12 +241,10 @@
 
                     <TextView
 
-                        android:layout_width="300dp"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="38dp"
-                        android:layout_weight="1"
-                        android:paddingStart="0dp"
-                        android:paddingEnd="0dp"
+                        android:layout_weight="0.4"
                         android:text="Income Generated :"
                         android:textColor="@color/blackText" />
 
@@ -250,46 +252,49 @@
                         android:id="@+id/txt_view_crop_harvest_card_income_generated"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                        android:layout_weight="0.6"
 
                         android:text="UGX 150,000"
                         android:textColor="#899889" />
                 </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:gravity="end"
-                    android:padding="0dp"
-                    android:layout_marginRight="4dp"
-                    android:layout_marginLeft="4dp"
-                    android:id="@+id/layout_crop_harvest_card_show_hide"
-                    android:background="@color/gray"
-                    android:visibility="gone">
 
-                    <ImageView
-                        android:id="@+id/img_crop_harvest_card_show_crops"
-                        android:layout_width="15dp"
-                        android:layout_height="15dp"
-                        android:backgroundTint="@color/black"
-                        android:textColor="@color/darker_gray"
-                        android:gravity="end"
-                        android:src="@drawable/arrow_drop_down" />
-                </LinearLayout>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:orientation="horizontal"
+                android:gravity="end"
+                android:padding="0dp"
+                android:layout_marginEnd="8dp"
 
-                <LinearLayout
-                    android:id="@+id/layout_crop_harvest_expand"
-                    android:orientation="vertical"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@color/gray"
-                    android:layout_marginRight="4dp"
-                    android:layout_marginLeft="4dp"
-                    android:visibility="gone">
+                android:id="@+id/layout_crop_harvest_card_show_hide"
+                android:background="#B6C5B6"
+                >
+
+                <ImageView
+                    android:id="@+id/img_crop_harvest_card_show_crops"
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    android:backgroundTint="@color/black"
+                    android:textColor="#D2DDD5"
+                    android:layout_marginEnd="18.17dp"
+                    android:layout_marginTop="10dp"
+                    android:src="@drawable/arrow_drop_down" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/layout_crop_harvest_expand"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:background="#B6C5B6"
+                android:padding="4dp"
+                android:visibility="gone"
+                >
 
 
-                </LinearLayout>
             </LinearLayout>
 
         </LinearLayout>
